# mascarpone

./: .gitignore  Cargo.toml  README.md  bsconfig.json  example-curl.sh  install.sh  package.json  preconfigured_blacklist.json  pyproject.toml  start.sh  uninstall.sh  utils.sh  webpack.config.js
client/: NewRecord.re  RowControls.re  Styles.re  Title.re
mascarpone/: bootstrap_app_daemon.py  filter_service.py  main.py  server.py  static  validators.py
mascarpone/templates/: index.html
public/: index.html
src/: App.js  App.re  AppConstants.re  DnsRow.re  EditDnsRow.re  ListFilterer.re  OpenNewRecord.re  Toast.re  ToastMaster.re  Utils.re  index.html  main.rs
templates/: index.html.tera
test/: test_validators.py
