[tool.poetry]
name = "mascarpone"
version = "0.1.0"
description = "Use dnsmasq to filter out content. Configure and restart dnsmasq via a web server and client."
authors = ["neallred <neallred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
waitress = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
